# realmate-pleno-willyam

./: .gitignore  Dockerfile  INSTRUCTIONS.md  README.md  docker-compose.yml  env.example  manage.py  pyproject.toml  requirements.txt
apps/conversations/: admin.py  business.py  choices.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/conversations/migrations/: 0001_initial.py
realmate_challenge/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
